--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "local": "^0.3.3",
     "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
     "mongoose": "^7.0.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "popups": "^1.1.3"
   }
 }
